--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -1,1 +1,3 @@
-
+[global]
+output_plot = directory where plots are saved: optional, if None or absent, plots are saved in the current directory
+daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
