--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -1,3 +1,10 @@
 [global]
 output_plot = directory where plots are saved: optional, if None or absent, plots are saved in the current directory
+plot_list = list of plot to create: map,cut,...
+
+[observations]
 daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
+
+[map]
+
+[cut]
