--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -5,6 +5,8 @@ plot_list = list of plot to create: map,cut,...
 [observations]
 daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
 
-[map]
+[map] # if map is in plot_list
+listexp = dictionary of experience to plot, exxemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
 
-[cut]
+[cut] # if cut is in plot_list
+listexp = list of experience to plot, exxemple: obs1,exp1,exp2,obs2
