--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -1,12 +1,23 @@
 [global]
 output_plot = directory where plots are saved: optional, if None or absent, plots are saved in the current directory
 plot_list = list of plot to create: map,cut,...
+nligne = nombre de ligne dans les plots
 
 [observations]
 daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
 
 [map] # if map is in plot_list
-listexp = dictionary of experience to plot, exxemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
+listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
 
 [cut] # if cut is in plot_list
-listexp = list of experience to plot, exxemple: obs1,exp1,exp2,obs2
+listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
+
+[exp]
+    [exp1]
+
+    [exp2]
+
+[obs]
+    [obs1]
+
+    [obs2]
