--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -1,13 +1,20 @@
 [global]
-output_plot = directory where plots are saved: optional, if None or absent, plots are saved in the current directory
+output_plot = directory where plots are saved: optional, if None or absent, plots are saved in a 'plot' directory which is in the current directory
 plot_list = list of plot to create: map,cut,...
-nligne = nombre de ligne dans les plots
+nligne = nombre maximale de ligne dans les plots
+ncol = nombre maximale de colonnes
 
 [observations]
 daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
 
 [map] # if map is in plot_list
 listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
+listvar : liste des variables à tracer: var1/DU,var2/1e9 # ici on trace var2*1e9
+level: niveau du modèle à tracer, obligatoire si la variable à tracer est 3D 
+case: 1,2 ou 3 # if case == 1: une expérience correspondera à une colonne et une heure à une ligne -> un graphique par variable
+               # if case == 2: une expérience correspondera à une colonne et une variable à une ligne -> un graphique par heure
+               # if case == 3: une variable correspondera à une colonne et une heure à une ligne -> un graphique par expérience
+               
 
 [cut] # if cut is in plot_list
 listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
