--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -1,6 +1,6 @@
 [global]
 output_plot = directory where plots are saved: optional, if None or absent, plots are saved in a 'plot' directory which is in the current directory
-plot_list = list of plot to create: map,cut,...
+type_plot = map or cut,...
 nligne = nombre maximale de ligne dans les plots
 ncol = nombre maximale de colonnes
 
