--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -10,10 +10,10 @@ daimon_path = directory of daimonobs package, useless if no hdf5 observations ar
 [map] # if map is in plot_list
 listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
 listvar : liste des variables à tracer: var1/DU,var2/1e9 # ici on trace var2*1e9
-listlevel: liste des niveaux du modèle à tracer, obligatoire si la variable à tracer est 3D exemple: 42-47 pour tracer les niveaux 42 à 47
 order: exemple: exp,date,var pour faire un graphique pour chaque expériences. Ungraphique contiendra les heures sur les colonnes et les va sur les lignes
                 exp,date,var,lev pour les variables 3D
 figsize = (x,y) taille de la figure 
+boundary = lon1,lon2/lat1,lat2/lev1,lev2
 
                
 
