--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -3,6 +3,7 @@ output_plot = directory where plots are saved: optional, if None or absent, plot
 type_plot = map or cut,...
 nligne = nombre maximale de ligne dans les plots
 ncol = nombre maximale de colonnes
+ext_package = list de package à récupérer namepack1:dirpack1,namepack2:dirpack2....
 
 [observations]
 daimon_path = directory of daimonobs package, useless if no hdf5 observations are plotted
@@ -16,17 +17,21 @@ figsize = x,y taille de la figure
 projection = PlateCarree:central_longitude ou Orthographic:central_longitude/central_latitude
 boundary = lon1,lon2/lat1,lat2/lev1,lev2
 
-               
-
+          
 [cut] # if cut is in plot_list
 listexp = dictionary of experience to plot, exemple: {obs:obs1,exp:exp1,exp:exp2,obs:obs2}
 
-[exp]
-    [exp1]
+[exp1]
+type_file = HMnc/min/max/hourly/daily/post_cams/post_prevair
+domain = domain to use
+user = user
+tree = vortex or script
+conf = fcst/surfana
+nameexp = oper/mirr/dble/????
+suffix = P or A
+group = analyse or forecast
+echeance = 0/24/48/72
+host = hendrix.meteo.fr/hendrix/belenos/taranis
 
-    [exp2]
+[obs1]
 
-[obs]
-    [obs1]
-
-    [obs2]
