--- a/config_exemple.cfg
+++ b/config_exemple.cfg
@@ -34,4 +34,9 @@ echeance = 0/24/48/72
 host = hendrix.meteo.fr/hendrix/belenos/taranis
 
 [obs1]
-
+dirin = /cnrm/plasma/Users/bacles/NO_SAVE/tmp/
+type = HDAT
+instrname = nom de l'instrument dans le HDAT/HSTAT/h5, utile uniquement si type in [HDAT, HSTAT, h5_obs ou h5_sim]
+domain = nom du domaine utile si type in [HSTAT, h5_sim]
+species = espece etudie, utile si type in [HDAT, HSTAT, h5_obs ou h5_sim] et instrtype in [intqty, colconc]
+instrtype = type de l'instrument (voir daimonobs) 
